non_executable_reasons_record/205.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### å¿…è¦ãªè¨­å®šã®èª­ã¿è¾¼ã¿
source ${HOME}/secrets
name=jquery.html

### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- 'EOS' > ${name}
    
<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
<html>
  <head>
    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
    <meta charset="utf-8">
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
    <title>ãŠã°ã‘</title>
    <script>
      $(function() {
        $('p').click(function() {$(this).fadeOut('slow');});
      });
    </script>
  </head>

  <body>
    <p>ãŠã°ã‘ãƒ¼</p>
  </body>
</html>

EOS

### ã‚½ãƒ¼ã‚¹ã®è»¢é€
sshpass -p "${pass}" scp ${name} ${user}@${host}:${path}
echo "created ${host}:${path}/${name}"
------------------

[0;36m  File [0;32m"<ipython-input-1-ecd0c9828f1d>"[0;36m, line [0;32m5[0m
[0;31m    source ${HOME}/secrets[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-ecd0c9828f1d>, line 5)

Executability                            : False
